# st-dagnositc

./: LICENSE  README.md  pyproject.toml
src/st_dagnositc/: __init__.py
src/st_dagnositc/core/: __init__.py  loader.py  models.py  processor.py  schema.py
tests/: conftest.py  test_loader.py  test_models.py  test_processor.py  test_schema.py
