[project]
name = "st-dagnositc"
version = "0.1.0"
description = "A data-agnostic importer for Streamlit"
readme = "README.md"
license = "MIT"
authors = [{ name = "huwilerb", email = "github@blaisehuwiler.ch" }]
requires-python = ">=3.11"
keywords = ["streamlit", "data", "import", "csv", "excel", "etl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = ["polars>=1.33.0", "streamlit>=1.49.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]
doc = ["mkdocs>=1.6.1"]
excel = ["openpyxl>=3.1.5", "pandas>=2.3.2"]

[project.urls]
Homepage = "https://github.com/huwilerb/st-dagnostic.git"
Documentation = "https://github.com/huwilerb/st-dagnostic.git"
Repository = "https://github.com/huwilerb/st-dagnostic.git"
Issues = "https://github.com/huwilerb/st-dagnostic/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/st_dagnositc"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP"]
ignore = ["E501"]                             # Line too long (handled by black)

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/st_dagnositc --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/st_dagnositc"]
omit = ["tests/*", "src/st_dagnositc/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
